# Smart-Recruitz

./: .gitignore  README.md  compute_score.py  gen_utilization.py  main.py  score_answers.py
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  test_voice_call.py
backend/app/: asgi.py  dependencies.py  main.py
backend/app/agents/: agent1_resume_parser.py  agent2_duplicate_detector.py  agent3_id_verifier.py  agent4_question_generator.py  agent5_interview_scorer.py  agent_consistency_check.py  jd_extractor.py
backend/app/agents/prompts/: agent1_prompt.py  agent2_prompt.py  agent3_prompt.py  agent4_prompt.py  agent5_prompt.py  agent_consistency_prompt.py  jd_extraction_prompt.py
backend/app/api/v1/: agents.py  auth.py  candidates.py  hiring_manager.py  router.py  tasks.py  voice_webhooks.py
backend/app/config/: constants.py  feature_flags.py  settings.py
backend/app/core/clients/: coresignal_client.py  openai_client.py  zingaro_client.py
backend/app/core/security/: auth.py  integration_auth.py
backend/app/core/storage/: local_storage.py
backend/app/db/: __init__.py  base.py  mixins.py  session.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  background_task.py  candidate_education.py  candidate_experience.py  candidate_main.py  candidate_skill.py  candidate_staging.py  interview.py  interview_question.py  recruit_user.py  skill_taxonomy.py  uploaded_document.py  verification.py
backend/app/repositories/: candidate_repository.py  document_repository.py  interview_repository.py  task_repository.py  verification_repository.py
backend/app/schemas/internal/: agent_outputs.py
backend/app/schemas/requests/: candidate.py
backend/app/schemas/responses/: candidate.py
backend/app/services/: candidate_service.py  lms_webhook.py
backend/app/utils/: document_text.py  phone.py
backend/app/workers/: main.py
backend/app/workers/handlers/: agent1_handler.py  agent2_handler.py  agent3_handler.py  agent4_handler.py  agent5_handler.py  (+2 more)
backend/docker/: Dockerfile  Dockerfile.worker  docker-compose.yml
backend/scripts/: clear_db.py  seed_test_candidates.py
backend/tests/unit/: test_phone.py  test_zingaro_client.py
(+109 files in other folders)
